Fix scrollbars

--- a/src/less/responsive.less
+++ b/src/less/responsive.less
@@ -106,6 +106,13 @@
 		left: 0 !important;
 		margin-left: 1.5%;
 	}
+	.tab-pane {
+		.tab-head {
+			p.lead {
+				font-size: 1rem;
+			}
+		}
+	}
 }
 
 @media (min-width: 481px) {
